# Surya-Teja-Portfolio

./: .gitattributes  .gitignore  CLAUDE.md  mdx-components.tsx  next.config.ts  package-lock.json  package.json
.claude/: settings.json
.claude/agents/: backend-architect.md  content-editor.md  qa-reviewer.md  (+3 more)
backend/: .env.example  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ask.py  auth.py  contact.py  events.py  health.py  metrics.py  projects.py  skill_graph.py  stats.py
backend/app/content/: portfolio.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: dynamodb.py
backend/app/models/: ai_query.py  contact.py  event.py  project.py
backend/app/rag/: chunks.py  index.json  retriever.py
backend/app/schemas/: ask.py  auth.py  common.py  contact.py  content.py  event.py  metric.py  metrics.py  post.py  project.py  skill_graph.py  stats.py
backend/app/services/: ask_service.py  auth_service.py  contact_service.py  event_service.py  metric_service.py  project_service.py  skill_graph_service.py  stats_service.py
backend/app/worker/: handler.py
backend/scripts/: build_rag_index.py
backend/tests/: conftest.py  test_ask.py  test_auth.py  test_contact.py  test_events.py  test_health.py  test_metrics.py  test_projects.py  test_rag.py  test_skill_graph.py  test_stats.py
docs/: deployment.md  local-dev.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json
(+195 files in other folders)
