[project]
name = "surya-portfolio-backend"
version = "0.1.0"
description = "FastAPI backend for the portfolio — runs on AWS Lambda via Mangum."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear, comprehensions
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Third-party libs without bundled type stubs.
module = ["jose.*", "mangum.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
